Make the dir_new template able to show as much of the log message as can fix on the screen, and have a fixed layout (which promotes rapid navigation).
* lib/viewvc.py
  (view_directory): Don't truncate rows.log any more, but provide a
    new member rows.short_log that is truncate.

* viewvc.org/upgrading.html
  Note rename of directory entries' "log" variable to "short_log".

* viewvc.org/template-authoring-guide.html
  Describe entries.log and (new) entries.short_log.

* templates/docroot/styles.css
  (table.fixed, table.fixed td): New fixed table styles, for use with
    the dir_new template.

* templates/dir_new.ezt
  Use new fixed table styles, and display as much of the log messages
  as screen-real-estate-ily possible (with ellipsis for truncation on
  IE, even).

* templates/directory.ezt
  Use entries.short_log now instead of entries.log.

--- a/trunk/templates/docroot/styles.css
+++ b/trunk/templates/docroot/styles.css
@@ -21,6 +21,15 @@ table {
 table.auto {
   width: auto;
 }
+table.fixed {
+  width: 100%;
+  table-layout: fixed;
+}
+table.fixed td {
+  overflow: hidden; 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 tr, td, th { vertical-align: top; }
 form { margin: 0; }
 
